lower log level

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ install:
   - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
 
 script:
-  - mvn $MVN_FLAG -Dmaven.javadoc.skip=true -B -V -e verify
+  - mvn $MVN_FLAG -Dmaven.javadoc.skip=true -B -V -e verify -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
